@@ -1,6 +1,7 @@
 2010-09-08  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Refactoring modfunc1/index.php
+	* Refactor redirect view and add search to it
 
 2010-08-31  Dmitry Dulepov  <dmitry@typo3.org>
 
